# Project-Icarus---PQC-Implementation

./: .gitignore  README.md  pyproject.toml  report.md  requirements.txt
docs/: LAB_GUIDE.md
src/: __init__.py  phase1_key_generation.py  phase2_telemetry_payload.py  phase3_secure_tunnel.py  phase4_quantum_mitm_attack.py  phase5_decoherence_simulation.py  run_lab.py
